[gd_scene load_steps=16 format=2]

[ext_resource path="res://Nodes/bird.gd" type="Script" id=1]
[ext_resource path="res://sprites/Flying (32x32).png" type="Texture" id=2]
[ext_resource path="res://sprites/wormthought.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 14.5086

[sub_resource type="CircleShape2D" id=14]
radius = 13.0384

[node name="Bird" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
script = ExtResource( 1 )

[node name="hunger_bubble" type="Sprite" parent="."]
visible = false
position = Vector2( 14, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.937255, 0.913725, 0.372549, 1 )
frames = SubResource( 1 )
speed_scale = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="bird_body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bird_body"]
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="bird_body" to="." method="_on_bird_body_area_entered"]
[connection signal="mouse_entered" from="bird_body" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="bird_body" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
